--- a/analyzer/src/main/resources/application.properties
+++ b/analyzer/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.application.name=analyzer
 spring.datasource.url=jdbc:h2:~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.defer-datasource-initialization=true
