--- a/analyzer/src/main/resources/application.properties
+++ b/analyzer/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=analyzer
-spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:~/analyzerdb
+
 spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
